--- a/app/src/main/res/layout/fragment_tab_settings.xml
+++ b/app/src/main/res/layout/fragment_tab_settings.xml
@@ -5,12 +5,12 @@
     tools:context="com.example.jack.hal.TabSettingsFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Settings"
-        android:textSize="40dp"
-        android:textStyle="bold"
-        android:layout_centerInParent="true"/>
+    <ListView
+        android:id="@+id/tab_settings_listview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+    </ListView>
 
 </FrameLayout>
