--- a/app/src/main/res/layout/light_listview_content.xml
+++ b/app/src/main/res/layout/light_listview_content.xml
@@ -1,25 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/light_room_text"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:paddingLeft="10dp"
         android:gravity="center_vertical"
-        android:minHeight="?android:attr/listPreferredItemHeightSmall" />
+        android:minHeight="?android:attr/listPreferredItemHeightSmall"
+        android:clickable="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false" />
 
     <Switch
         android:id="@+id/light_switch"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
-        android:paddingRight="10dp"
-        android:minHeight="?android:attr/listPreferredItemHeightSmall"/>
+        android:paddingLeft="50dp"
+        android:minHeight="?android:attr/listPreferredItemHeightSmall"
+        />
 
 
 
-</RelativeLayout>
+</LinearLayout>
