--- a/app/src/main/res/layout/light_listview_content.xml
+++ b/app/src/main/res/layout/light_listview_content.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -8,7 +8,7 @@
         android:id="@+id/light_room_text"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:paddingLeft="10dp"
+        android:paddingLeft="20dp"
         android:gravity="center_vertical"
         android:minHeight="?android:attr/listPreferredItemHeightSmall"
         android:clickable="false"
@@ -20,10 +20,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
-        android:paddingLeft="50dp"
+        android:paddingRight="10dp"
         android:minHeight="?android:attr/listPreferredItemHeightSmall"
-        />
+        android:layout_alignParentRight="true" />
 
-
-
-</LinearLayout>
+</RelativeLayout>
