--- a/app/src/main/res/layout/light_listview_content.xml
+++ b/app/src/main/res/layout/light_listview_content.xml
@@ -15,13 +15,22 @@
         android:focusable="false"
         android:focusableInTouchMode="false" />
 
-    <Switch
-        android:id="@+id/light_switch"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+    <!--<Switch-->
+        <!--android:id="@+id/light_switch"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:gravity="center_vertical"-->
+        <!--android:paddingRight="10dp"-->
+        <!--android:minHeight="?android:attr/listPreferredItemHeightSmall"-->
+        <!--android:layout_alignParentRight="true" />-->
+
+    <Button
+        android:id="@+id/light_button"
+        android:layout_width="20dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/roundedbutton"
         android:gravity="center_vertical"
-        android:paddingRight="10dp"
+        android:paddingRight="90dp"
         android:minHeight="?android:attr/listPreferredItemHeightSmall"
         android:layout_alignParentRight="true" />
-
 </RelativeLayout>
