--- a/app/src/main/res/layout/room_listview_content.xml
+++ b/app/src/main/res/layout/room_listview_content.xml
@@ -15,12 +15,22 @@
         android:focusable="false"
         android:focusableInTouchMode="false" />
 
-    <TextView
-        android:id="@+id/room_appliance_state"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+    <!--<TextView-->
+        <!--android:id="@+id/room_appliance_state"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:gravity="center_vertical"-->
+        <!--android:paddingRight="30dp"-->
+        <!--android:minHeight="?android:attr/listPreferredItemHeightSmall"-->
+        <!--android:layout_alignParentRight="true" />-->
+
+    <Button
+        android:id="@+id/room_button"
+        android:layout_width="20dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/roundedbutton"
         android:gravity="center_vertical"
-        android:paddingRight="30dp"
+        android:paddingRight="90dp"
         android:minHeight="?android:attr/listPreferredItemHeightSmall"
         android:layout_alignParentRight="true" />
 
