--- a/app/src/main/res/layout/room_listview_content.xml
+++ b/app/src/main/res/layout/room_listview_content.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -24,14 +24,16 @@
         <!--android:minHeight="?android:attr/listPreferredItemHeightSmall"-->
         <!--android:layout_alignParentRight="true" />-->
 
+
     <Button
         android:id="@+id/room_button"
-        android:layout_width="20dp"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:background="@drawable/roundedbutton"
-        android:gravity="center_vertical"
-        android:paddingRight="90dp"
-        android:minHeight="?android:attr/listPreferredItemHeightSmall"
-        android:layout_alignParentRight="true" />
 
-</RelativeLayout>
+        android:minHeight="?android:attr/listPreferredItemHeightSmall"
+        android:layout_alignParentRight="true"
+        android:gravity="center_vertical"
+        android:text="button" />
+
+</LinearLayout>
