--- a/app/src/main/res/layout/room_listview_content.xml
+++ b/app/src/main/res/layout/room_listview_content.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -25,15 +25,17 @@
         <!--android:layout_alignParentRight="true" />-->
 
 
-    <Button
+    <ImageButton
         android:id="@+id/room_button"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:background="@drawable/roundedbutton"
-
+        android:layout_width="50dip"
+        android:layout_height="50dip"
+        android:src="@drawable/powerbutton3"
         android:minHeight="?android:attr/listPreferredItemHeightSmall"
         android:layout_alignParentRight="true"
         android:gravity="center_vertical"
-        android:text="button" />
+        android:scaleType="fitCenter"
+        android:background="@null"
+        android:layout_marginRight="15dp"/>
 
-</LinearLayout>
+
+</RelativeLayout>
