--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -35,11 +35,13 @@
 
 
         <LinearLayout
+
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <ListView
                 android:id="@+id/sampleroom_listview"
+                android:descendantFocusability="blocksDescendants"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
