--- a/app/src/main/res/layout/childs_pattern_list.xml
+++ b/app/src/main/res/layout/childs_pattern_list.xml
@@ -1,16 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:descendantFocusability="blocksDescendants"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/pattern_listview_dscp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:minHeight="?android:attr/listPreferredItemHeightSmall"
+        android:gravity="center_vertical" />
 
-    <ImageButton
-        android:id="@+id/pattern_listview_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
 
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/container"
+        android:layout_alignParentRight="true"
+        android:layout_width="40dp"
+        android:layout_height="40dp" >
+
+        <ImageButton
+            android:id="@+id/pattern_listview_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/garbage_bin"
+            android:minHeight="?android:attr/listPreferredItemHeightSmall"
+            android:layout_alignParentRight="true"
+            android:scaleType="fitXY"
+            android:gravity="center_vertical" />
+
+    </LinearLayout>
+
+
+
+</RelativeLayout>
