--- a/app/src/main/res/layout/listtitle_pattern_list.xml
+++ b/app/src/main/res/layout/listtitle_pattern_list.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/pattern_listview_title"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:minHeight="?android:attr/listPreferredItemHeightSmall"
+        android:gravity="center_vertical"
+        android:clickable="false"
+        android:focusable="false"
+        />
 
     <Switch
         android:id="@+id/pattern_listview_switch"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:focusable="false"
+        android:minHeight="?android:attr/listPreferredItemHeightSmall"
+        android:layout_alignParentRight="true"
+        android:gravity="center_vertical"        />
 
-</LinearLayout>
+</RelativeLayout>
