--- a/app/src/main/res/layout/content_pattern_list.xml
+++ b/app/src/main/res/layout/content_pattern_list.xml
@@ -16,6 +16,8 @@
 
     <ExpandableListView
         android:id="@+id/pattern_listview"
+        android:groupIndicator="@null"
+        android:focusable="false"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
