--- a/app/src/main/res/layout/listtitle_pattern_list.xml
+++ b/app/src/main/res/layout/listtitle_pattern_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
+    android:descendantFocusability="blocksDescendants"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,8 +11,7 @@
         android:layout_height="match_parent"
         android:minHeight="?android:attr/listPreferredItemHeightSmall"
         android:gravity="center_vertical"
-        android:clickable="false"
-        android:focusable="false"
+
         />
 
     <Switch
@@ -19,6 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:focusable="false"
+        android:focusableInTouchMode="false"
         android:minHeight="?android:attr/listPreferredItemHeightSmall"
         android:layout_alignParentRight="true"
         android:gravity="center_vertical"        />
