--- a/app/src/main/res/layout/listtitle_pattern_list.xml
+++ b/app/src/main/res/layout/listtitle_pattern_list.xml
@@ -11,7 +11,8 @@
         android:layout_height="match_parent"
         android:minHeight="?android:attr/listPreferredItemHeightSmall"
         android:gravity="center_vertical"
-
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         />
 
     <Switch
